Specialist links added

--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
           <div class="specialists-slider swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="specialist-card card d-flex flex-column mb-md-4">
+                <div class="specialist-card card d-flex flex-column mb-md-4 position-relative">
+                  <a class="card-link" href="./single-specialist.html"></a>
                   <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
-                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                    <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                   </div>
                   <div class="d-flex flex-column align-items-center gap-1">
                     <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -136,13 +137,14 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                  <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="specialist-card card d-flex flex-column mb-md-4">
+                <div class="specialist-card card d-flex flex-column mb-md-4 position-relative">
+                  <a class="card-link" href="./single-specialist.html"></a>
                   <div class="card-img rounded-circle overflow-hidden align-self-center border-purple">
-                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                    <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                   </div>
                   <div class="d-flex flex-column align-items-center gap-1">
                     <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -172,13 +174,14 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                  <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="specialist-card card d-flex flex-column mb-md-4">
+                <div class="specialist-card card d-flex flex-column mb-md-4 position-relative">
+                  <a class="card-link" href="./single-specialist.html"></a>
                   <div class="card-img rounded-circle overflow-hidden align-self-center border-teal">
-                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                    <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                   </div>
                   <div class="d-flex flex-column align-items-center gap-1">
                     <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -208,13 +211,14 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                  <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="specialist-card card d-flex flex-column mb-md-4">
+                <div class="specialist-card card d-flex flex-column mb-md-4 position-relative">
+                  <a class="card-link" href="./single-specialist.html"></a>
                   <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
-                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                    <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                   </div>
                   <div class="d-flex flex-column align-items-center gap-1">
                     <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -244,13 +248,14 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                  <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="specialist-card card d-flex flex-column mb-md-4">
+                <div class="specialist-card card d-flex flex-column mb-md-4 position-relative">
+                  <a class="card-link" href="./single-specialist.html"></a>
                   <div class="card-img rounded-circle overflow-hidden align-self-center border-purple">
-                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                    <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                   </div>
                   <div class="d-flex flex-column align-items-center gap-1">
                     <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -280,13 +285,14 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                  <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="specialist-card card d-flex flex-column mb-md-4">
+                <div class="specialist-card card d-flex flex-column mb-md-4 position-relative">
+                  <a class="card-link" href="./single-specialist.html"></a>
                   <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
-                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                    <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                   </div>
                   <div class="d-flex flex-column align-items-center gap-1">
                     <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -316,7 +322,7 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                  <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
                 </div>
               </div>
             </div>            
@@ -370,7 +376,7 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <article class="post-card card my-md-3">
-                  <a href="#">
+                  <a href="./post.html">
                     <div class="card-img card-img-top">
                       <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
@@ -384,7 +390,7 @@
               </div>
               <div class="swiper-slide">
                 <article class="post-card card my-md-3">
-                  <a href="#">
+                  <a href="./post.html">
                     <div class="card-img card-img-top">
                       <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
@@ -398,7 +404,7 @@
               </div>
               <div class="swiper-slide">
                 <article class="post-card card my-md-3">
-                  <a href="#">
+                  <a href="./post.html">
                     <div class="card-img card-img-top">
                       <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
@@ -412,7 +418,7 @@
               </div>
               <div class="swiper-slide">
                 <article class="post-card card my-md-3">
-                  <a href="#">
+                  <a href="./post.html">
                     <div class="card-img card-img-top">
                       <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
@@ -426,7 +432,7 @@
               </div>
               <div class="swiper-slide">
                 <article class="post-card card my-md-3">
-                  <a href="#">
+                  <a href="./post.html">
                     <div class="card-img card-img-top">
                       <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
