--- a/specialists.html
+++ b/specialists.html
@@ -86,9 +86,10 @@
           </div>          
           <div class="row row-cols-lg-3 row-cols-xxl-4 gy-4">
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -118,13 +119,14 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-purple">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -154,13 +156,14 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-teal">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -190,13 +193,14 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -226,13 +230,14 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-purple">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -262,13 +267,14 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-teal">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -298,13 +304,14 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -334,13 +341,14 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
             <div class="col">
-              <div class="specialist-card card d-flex flex-column">
+              <div class="specialist-card card d-flex flex-column position-relative">
+                <a class="card-link" href="./single-specialist.html"></a>
                 <div class="card-img rounded-circle overflow-hidden align-self-center border-purple">
-                  <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" />
+                  <a href="./single-specialist.html"><img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" loading="lazy" /></a>
                 </div>
                 <div class="d-flex flex-column align-items-center gap-1">
                   <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
@@ -370,7 +378,7 @@
                     <li class="rounded-pill">Отношения с партнером</li>
                   </ul>
                 </div>
-                <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</a>
+                <button type="button" class="btn btn-sm btn-gradient rounded-pill text-truncate position-relative z-1" data-bs-toggle="modal" data-bs-target="#contactSpecialistModal" data-specialist="Иван Иванов">Связаться со специалистом</button>
               </div>
             </div>
           </div>
@@ -457,7 +465,7 @@
           <div class="d-flex flex-column">
             <ul class="mobile-nav-menu d-flex flex-column list-unstyled m-0">
               <li><a href="./#about">О проекте</a></li>
-              <li><a href="./specialists.html">Специалисты</a></li>
+              <li><a class="active" href="./specialists.html">Специалисты</a></li>
               <li><a href="./specialists.html">Психологи</a></li>
               <li><a href="./specialists.html">Коучи</a></li>
               <li><a href="./specialists.html">Энергопрактики</a></li>
