--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
               <p class="mb-0">Рекламный текст Рекламный текст Рекламный текст Рекламный текстРекламный текст Рекламный </p>
             </div>
             <div class="col-md-4 d-flex justify-content-md-end">
-              <a href="#" data-bs-toggle="modal" data-bs-target="#joinCommunityModal" class="btn btn-lg btn-light rounded-pill text-truncate">Присоединиться</a>
+              <a href="#" data-bs-toggle="modal" data-bs-target="#joinCommunityModal" class="btn btn-lg btn-light rounded-pill text-truncate"><span class="gradient-text">Присоединиться</span></a>
             </div>
           </div>
         </div>
