--- a/single-specialist.html
+++ b/single-specialist.html
@@ -18,7 +18,7 @@
 
   <body>
     
-    <div class="site-alert bg-primary d-flex flex-column justify-content-center">
+    <!-- <div class="site-alert bg-primary d-flex flex-column justify-content-center">
       <div class="container-fluid d-flex flex-column flex-md-row justify-content-between align-items-center text-white gap-2">
         <p class="mb-0 fw-medium text-center">Текст со специальным предложением</p>
         <div class="d-flex align-items-center gap-3">
@@ -26,7 +26,7 @@
           <span class="fw-semibold counter">10:30</span>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <nav class="navbar">
       <div class="container-fluid">
@@ -77,7 +77,7 @@
             </ol>
           </nav>
           <div class="d-flex flex-column flex-lg-row justify-content-between gap-4">
-            <aside class="specialist-sidebar card d-flex flex-column">
+            <aside class="specialist-sidebar card d-flex flex-column align-self-start">
               <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
                 <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" />
               </div>
@@ -126,16 +126,16 @@
             <div class="specialist-main d-flex flex-column">
               <ul class="info-nav nav mb-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Обо мне</a>
+                  <a class="nav-link smoothScroll active" aria-current="page" href="#about">Обо мне</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Методы работы</a>
+                  <a class="nav-link smoothScroll" href="#methods">Методы работы</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Запросы на проработку</a>
+                  <a class="nav-link smoothScroll" href="#inquiries">Запросы на проработку</a>
                 </li>
               </ul>
-              <div id="about" class="about-section d-flex flex-column gap-4">
+              <div id="about" class="scroll-margin-top-30 d-flex flex-column gap-4">
                 <h3 class="mb-0">Обо мне</h3>
                 <div class="content">
                   <p>Гуманитарная научная дисциплина, изучающая закономерности возникновения, развития и функционирования психики и психической деятельности человека и групп людей.</p>
@@ -148,7 +148,37 @@
                   <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
                 </div>
               </div>
-              
+              <div class="meta-section d-flex flex-column">
+                <h3 class="mb-0">Интересы</h3>
+                <ul class="service-list list-unstyled mb-0 d-flex gap-2 flex-wrap">
+                  <li class="rounded-pill text-truncate">Кино</li>
+                  <li class="rounded-pill text-truncate">Духовное развитие</li>
+                  <li class="rounded-pill text-truncate">Физическое развитие</li>
+                  <li class="rounded-pill text-truncate">Жизненный выбор</li>
+                  <li class="rounded-pill text-truncate">Карьера</li>
+                  <li class="rounded-pill text-truncate">Отношения с семьей</li>
+                </ul>
+              </div>
+              <div id="methods" class="scroll-margin-top-30 meta-section d-flex flex-column">
+                <h3 class="mb-0">Методы работы</h3>
+                <ul class="service-list list-unstyled mb-0 d-flex gap-2 flex-wrap">
+                  <li class="rounded-pill text-truncate">Психоанализ</li>
+                  <li class="rounded-pill text-truncate">Коучинг</li>
+                  <li class="rounded-pill text-truncate">Гештальт</li>
+                  <li class="rounded-pill text-truncate">НЛП</li>
+                  <li class="rounded-pill text-truncate">Клиент-центрированная терапия</li>
+                  <li class="rounded-pill text-truncate">Краткосрочная психодинамическая терапия</li>
+                  <li class="rounded-pill text-truncate">Арт-терапия</li>
+                </ul>
+              </div>
+              <div id="inquiries" class="scroll-margin-top-30 meta-section d-flex flex-column">
+                <h3 class="mb-0">Запросы на проработку</h3>
+                <ul class="service-list list-unstyled mb-0 d-flex gap-2 flex-wrap">
+                  <li class="rounded-pill text-truncate">Нет друзей</li>
+                  <li class="rounded-pill text-truncate">Отношения с детьми</li>
+                  <li class="rounded-pill text-truncate">Отношения с партнером</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
